Support generated parser dependencies for language LSP